<resources>
    <string name="app_name">ALocMess</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="retype_password">Type Password Again</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_passwords_do_not_match">Passwords do not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_list_locations">Locations</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_archive">Archive</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="my_messages">My Messages</string>
    <string name="logout">logout</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    <string name="gps_string">GPS</string>
    <string name="wifi_string">WIFI</string>
    <string name="title_activity_location_messages">LocationMessages</string>
    <string name="username_already_exists">username already exists</string>
    <string name="post_message">Post Message</string>
    <string name="server_mode">Server Mode</string>
    <string name="centralized_mode">Decentralized Mode</string>
    <string name="post_message_title">Add a Message</string>

    <string-array name="equal_different_array">
        <item>≠</item>
        <item>==</item>
    </string-array>
    <string-array name="keywords_array">
        <item>profession</item>
        <item>damn</item>
    </string-array>
    <string name="title_activity_new_gpslocation">Map</string>
    <string name="title_activity_dummy_maps">Map</string>
    <string name="title_activity_new_gpslocation2">Map</string>
    <string name="arco_do_cego">Arco do Cego</string>
    <string name="give_name_location">You need to give a name to the location</string>
    <string name="ok">ok</string>
    <string name="cancel">Cancel</string>
    <string name="selected_city">Seleted city</string>
    <string name="new_location_wifi_2">" as a new location?</string>
    <string name="new_location_wifi_1">Do you want to save "</string>
    <string name="name_of_the_location">Name of the location:</string>
    <string name="radius">Radius:</string>
    <string name="title_activity_show_location">Map</string>
    <string name="your_location">Your location</string>
    <string name="save">Save</string>
    <string name="add_keyword">Add Keyword</string>
    <string name="add_network_id">Add Network ID</string>
    <string name="no_wi_fi_connection">No Wi-fi connection</string>
    <string name="name_of_location">Name of location:</string>
    <string name="intent_broadcast_new_messages">cmu1617.andred.pt.locmess.NEWMESSAGES</string>


    <!-- WIFI DIRECT -->
    <string name="port">10001</string>
</resources>
