<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin">-->
    <include layout="@layout/progress_wheel"/>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/scroll_view_profile"
        android:fadeScrollbars="false"
        android:fillViewport="true"
        tools:context="cmu1617.andred.pt.locmess.ProfileActivity">
        <LinearLayout
            android:id="@+id/container_profile"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:layout_margin="20dip">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/initial"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:text="@string/no_wi_fi_connection"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/profile_list_keywords"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:text="@string/name_of_location"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/written_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.CoordinatorLayout
                android:id="@+id/profile_add_constraint_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                tools:layout_editor_absoluteY="0dp"
                tools:layout_editor_absoluteX="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="40dp"
                    android:textSize="20sp"
                    android:text="@string/add_network_id"/>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/profile_add_keyword_buttom"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="50dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:backgroundTint="@color/colorAccent"
                    android:tint="@color/white"
                    app:srcCompat="@drawable/ic_add"/>

            </android.support.design.widget.CoordinatorLayout >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/cancel_button_profile"
                    android:text="@string/cancel"
                    android:layout_marginLeft="35dp"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/save_button_profile"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="35dp"
                    android:text="@string/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>